# Alokator

./: CMakeLists.txt  heap.c  heap.h  makefile  tested_declarations.h  unit_test_v2.c
